2002-06-19  Jeff Freedman  <jsf@usf-cf-x86-linux-1>

	* shapeid.cc,etc:  Game_window::get_info(Game_object *) is
	replaced by ShapeID.get_info().
	* Lots:  Cleanup:  Game_window::get_game_window() => get_instance().
	* Lots:  ::as_actor() replaces lots of dynamic_cast's.

2002-06-19  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* data/bg/*, gumps/Paperdoll_gump_info.cc: new art by Oblivious

2002-06-18  Dominik Reichardt <gigdr@tesionmail.de>
	* data/bg/defaultkeys.txt: mapped ctrl-c to copy and 
	  INSERT to "create item
	* data/si/defaultkeys.txt: the same
	* docs/xml/docs.xml, faq.xml : updated
	* docs/readme.html, faq.html : updated
	* readme/FAQ : updated

2002-06-13 Simon Quinn <email@simonquinn.co.uk>
	* Fixed sound crashing on startup and in-game when sound was disabled

2002-06-13  Ryan Nunn  <triforce@merlin.net.au>
	* exult.cc, audio/xmidi.cc : Getting around some problems with (our)
	  snprintf not supporting floating point types.

2002-06-13  Ryan Nunn  <triforce@merlin.net.au>
	* Any file that I changed, but not the 2 below : Changed lots of things
	  to use DataSources rather than directly use streams. Hopefully
	  nothing is broken. I expect that there will be numerous
	  signed/unsigned problem for people who are using more standards
	  compliant compilers than me.

	* usecode/ucinternal.cc, msvcstuff/Exult.dsp : Getting to compile in
	  MSVC once again

2002-06-10  Jeff Freedman  <jeff@amy.nerble.net>

	* actors.cc (Npc_actor): Fixed a nasty bug I caused which could
	make NPC's disappear when they're moved.
	* content/islefaq: Find the missing FAQ:-)

2002-06-10 Simon Quinn <email@simonquinn.co.uk>
	* added more details to the audio/README

2002-06-09  Jeff Freedman  <jeff@amy.nerble.net>

	* gamewin.cc (public): Check for player != 0.
	* mapedit/npcedit.cc,etc:  New NPC's are now created using the
	'unused' entries, and deleted NPC's are marked 'unused'.
	* actors.{cc,h},actorio.cc,readnpcs.cc: Use iflag2 correctly.  If